[tool.poetry]
name = "borkprod"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
easypydb = "^0.1"
flask = "^1.1.2"
bork = "^5.1.0"
regex = "^2021.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
